--- a/src/ui/stylesheet.styl
+++ b/src/ui/stylesheet.styl
@@ -50,7 +50,7 @@
 body
 	background-color var(--bgcolor)
 	color var(--color)
-	font 11pt/1.5 'Albert Sans', 'Microsoft Sans Serif', 'Yu Gothic'
+	font 12pt 'UD Digi Kyokasho NK-R'
 	margin 0
 
 // Paragraphs
@@ -61,7 +61,7 @@ hr
 	background currentColor
 	border 0
 	height 1px
-	margin 2em 0 0 0
+	margin 1em 0 0 0
 	width 480px
 
 // Formatted text
