--- a/src/ui/product/post/Score.pug
+++ b/src/ui/product/post/Score.pug
@@ -26,9 +26,9 @@ style.
 	.score
 		background var(--commentcolor)
 	.score-size-ones
-		font-size 9pt
+		font-size 0.75em
 	.score-size-thousands
-		font-size 12pt
+		font-size 1em
 	.score-color-downvoted
 		color cornflowerblue
 	.score-color-negative
