post: refine design and layout

--- a/src/ui/infra/Router.pug
+++ b/src/ui/infra/Router.pug
@@ -68,6 +68,7 @@ nav.account-nav
 style.
 	.account-nav
 		align-items flex-end
+		box-sizing border-box
 		display flex
 		flex-flow column nowrap
 		padding 16px
@@ -98,10 +99,11 @@ style.
 		flex-flow column nowrap
 		left 5vw
 		height 100vh
+		max-width 960px
 		overflow-y auto
-		padding-left calc(50% - 300px)
+		padding-left 30vw
 		position fixed
 		top 0
-		width calc(100vw - 160px)
+		width 50vw
 		&::-webkit-scrollbar
 			display none
