--- a/src/ui/product/subreddit/Wiki.pug
+++ b/src/ui/product/subreddit/Wiki.pug
@@ -38,6 +38,8 @@ style.
 		opacity 0.5
 	.wiki-page-name
 		font-size 2em
+	:global(.wiki-page img)
+		max-width 100%
 	:global(.wiki-page .toc)
 		box-sizing border-box
 		font-size 12px
@@ -46,7 +48,7 @@ style.
 		overflow auto
 		padding 8em 0
 		position fixed
-		right calc(50% + 320px)
+		right 70vw
 		top 0
 		&::-webkit-scrollbar
 			display none
