internals: move font names to variables

--- a/src/ui/product/post/AVPlayer.pug
+++ b/src/ui/product/post/AVPlayer.pug
@@ -144,14 +144,14 @@ style.
 		border-right 1px solid
 		display flex
 		flex 1
-		font 12px 'roboto mono'
+		font 12px var(--typeface-mono)
 		height 100%
 		justify-content center
 	.sound-region
 		align-items center
 		display flex
 		flex 2
-		font 12px 'roboto mono'
+		font 12px var(--typeface-mono)
 		height 100%
 		justify-content center
 	.video-volume
@@ -167,7 +167,7 @@ style.
 	time
 		background white
 		border-radius 6px
-		font 18px 'roboto mono'
+		font 18px var(--typeface-mono)
 		margin 10px
 		padding 2px 6px
 		position absolute
