--- a/src/ui/product/post/Post.pug
+++ b/src/ui/product/post/Post.pug
@@ -142,7 +142,7 @@ style.
 		align-items center
 		color #808080
 		display flex
-		font 12px 'roboto mono'
+		font 12px var(--typeface-mono)
 		gap 1ch
 		margin-top 1em
 	.post-iframe
@@ -160,7 +160,7 @@ style.
 	.post-info
 		align-items center
 		display flex
-		font bold 12px 'roboto mono'
+		font bold 12px var(--typeface-mono)
 		gap 1ch
 		justify-content space-between
 		opacity 0.75
