--- a/src/ui/product/user/Avatar.pug
+++ b/src/ui/product/user/Avatar.pug
@@ -50,6 +50,6 @@ style.
 		z-index 1
 	.avatar-user-info-popup-cakeday
 	.avatar-user-info-popup-karma
-		font 12px 'roboto mono'
+		font 12px var(--typeface-mono)
 	.avatar-user-info-popup-username
 		font-weight bold
