--- a/src/ui/product/controls/HotkeyLabel.pug
+++ b/src/ui/product/controls/HotkeyLabel.pug
@@ -9,5 +9,5 @@ style.
 		border-radius 4px
 		display flex
 		align-items center
-		font 12px/15px 'roboto mono'
+		font 12px/15px var(--typeface-mono)
 		padding 0 4px 0 5px
