internals: standardize color variables

--- a/src/ui/infra/Router.pug
+++ b/src/ui/infra/Router.pug
@@ -90,7 +90,7 @@ style.
 		width 96px
 	.global-home-link
 		aspect-ratio 1
-		background var(--linkcolor)
+		background var(--color-writing-action)
 		border-radius 50%
 		display block
 		height 64px
