--- a/src/ui/infra/VitalsMonitor.pug
+++ b/src/ui/infra/VitalsMonitor.pug
@@ -31,10 +31,10 @@ style.
 		height 16px
 		transition all 0.5s
 		&.vitals-unknown
-			background gray
+			background var(--color-signal-unknown)
 		&.vitals-ok
-			background lightseagreen
+			background var(--color-signal-ok)
 		&.vitals-caution
-			background wheat
+			background var(--color-signal-caution)
 		&.vitals-error
-			background salmon
+			background var(--color-signal-error)
