--- a/src/ui/product/post/Post.pug
+++ b/src/ui/product/post/Post.pug
@@ -111,7 +111,7 @@ svelte:head
 
 style.
 	.post-card
-		background var(--commentcolor)
+		background var(--color-paper-action)
 		border-radius 1em
 		text-align left
 		padding 1em
@@ -189,7 +189,7 @@ style.
 		position absolute
 		right 1em
 	.post-title
-		color var(--linkcolor)
+		color var(--color-writing-action)
 		font-size 1em
 		margin 0
 		overflow-wrap anywhere
