--- a/src/ui/product/post/Score.pug
+++ b/src/ui/product/post/Score.pug
@@ -32,7 +32,7 @@ button.score(class='score-color-{colorClass}' class='score-size-{sizeClass}' on:
 
 style.
 	.score
-		background var(--commentcolor)
+		background var(--color-paper-action)
 	.score-size-ones
 		font-size 0.75em
 	.score-size-thousands
@@ -42,8 +42,8 @@ style.
 	.score-color-negative
 		color red
 	.score-color-neutral
-		color var(--separatorcolor)
+		color var(--color-paper-border)
 	.score-color-positive
-		color var(--linkcolor)
+		color var(--color-writing-action)
 	.score-color-upvoted
 		color chartreuse
