--- a/src/ui/product/subreddit/Rules.pug
+++ b/src/ui/product/subreddit/Rules.pug
@@ -19,7 +19,7 @@ style.
 	.subreddit-rule
 		margin 1em 0 0 0
 	.subreddit-rule-name
-		color var(--linkcolor)
+		color var(--color-writing-action)
 		font-weight bold
 	.subreddit-rule-description
 		padding 1em
