--- a/src/ui/product/subreddit/Wiki.pug
+++ b/src/ui/product/subreddit/Wiki.pug
@@ -53,7 +53,7 @@ style.
 		&::-webkit-scrollbar
 			display none
 	:global(.wiki-page .toc > ul)
-		background var(--tintcolor)
+		background var(--color-paper-callout)
 		padding 3em 2em !important
 	:global(.wiki-page .toc li)
 		margin-top 1em
