--- a/src/ui/product/user/Avatar.pug
+++ b/src/ui/product/user/Avatar.pug
@@ -37,10 +37,10 @@ style.
 	.avatar-picture
 		width 100%
 	.avatar-picture-user-unknown
-		background var(--tintcolor)
+		background var(--color-paper-callout)
 		height 100%
 	.avatar-user-info-popup
-		background var(--bgcolor)
+		background var(--color-paper)
 		border 1px solid
 		border-radius 1ch
 		bottom 0
