--- a/src/ui/product/post/Post.pug
+++ b/src/ui/product/post/Post.pug
@@ -104,12 +104,13 @@ svelte:head
 				.post-selftext
 					SelftextMarkup(html={post.selftext_html})
 		{#if post.replies?.length}
-			ol.post-replies
-				{#each post.replies as replyId}
-					Comment(id={replyId})
-				{#if post.more_replies}
-					.post-more-replies
-						Button(appearance='text' text="+ {post.more_replies.length} more {post.more_replies.length === 1 ? 'reply' : 'replies'}...")
+			{#key post.replies}
+				ol.post-replies
+					{#each post.replies as replyId}
+						Comment(id={replyId})
+					{#if post.more_replies}
+						.post-more-replies
+							Button(action={() => api.load(post.more_replies_id)} appearance='text' text="+ {post.more_replies.length} more {post.more_replies.length === 1 ? 'reply' : 'replies'}...")
 		.post-minimap
 			{#key DOM.post?.scrollHeight, DOM.post?.offsetHeight}
 				Minimap(contentHeight={DOM.post?.scrollHeight} currentScroll={currentScroll} pattern={minimapPattern()} scroll={(y) => DOM.post.scrollTop = y} viewingWindowHeight={DOM.post?.offsetHeight})
