api: check dataset IDs against known routes; improve error classes

--- a/src/ui/product/subreddit/Multireddit.pug
+++ b/src/ui/product/subreddit/Multireddit.pug
@@ -15,7 +15,7 @@ svelte:head
 	{:else}
 		title multi: {user_name}/{name}
 {#if error}
-	{#if error instanceof api.errors.ConnectionFailedError || error instanceof api.errors.InvalidRequestError}
+	{#if error instanceof api.errors.ServerError}
 		PageUnavailable(path='/user/{user_name}/m/{name}')
 {:else if postIds}
 	PostList(ids={postIds} multireddit={true})
