ui: fix ordered lists incorrectly using unordered markers

--- a/src/ui/stylesheet.styl
+++ b/src/ui/stylesheet.styl
@@ -126,11 +126,8 @@ ol
 ul
 	margin 0
 	padding 0
-ol ol
-ol ul
-ul ol
-ul ul
-	list-style-type initial
+	& ul
+		list-style-type initial
 .md ol
 .md ul
 	margin 0.5em 0 0 0
